--- a/angular-client/src/index.html
+++ b/angular-client/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Sileau</title>
     <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Let browser know website is optimized for mobile-->
